--- a/src/pages/settlers2Text/index.astro
+++ b/src/pages/settlers2Text/index.astro
@@ -3,8 +3,6 @@ import 'normalize.css'
 import 'sanitize.css'
 import 'sanitize.css/typography.css'
 
-import { Markdown } from 'astro/components';
-
 import { S2Text } from '../../components/s2text/S2Text.tsx'
 
 ---
@@ -16,6 +14,16 @@ import { S2Text } from '../../components/s2text/S2Text.tsx'
     <style global>
 html {
   padding: 2rem;
+}
+
+label {
+  background: #333;
+  border-radius: 1rem;
+  color: white;
+  display: block;
+  margin-inline-end: 160px;
+  padding: 2rem;
+  text-align: center;
 }
 
 table {
@@ -48,14 +56,6 @@ textarea {
   width: 100%;
 }
 
-li {
-  margin: 0.125rem 0;
-}
-
-li:empty::marker {
-  color: rgba(0, 0, 0, 0.5);
-}
-
 button {
   background: #def0f9;
   border: 2px solid rgba(0, 0, 0, 0.5);
@@ -78,6 +78,7 @@ input[type='file'] {
     </style>
   </head>
   <body>
+    <h1><img alt="The Settlers II Text Editor" src="/assets/s2blu.png" width="144" height="82" style="float:right" /></h1>
     <S2Text client:load />
   </body>
 </html>
