--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import { Test } from '../components/Test.tsx'
   </head>
   <body>
     <Markdown>
-      # Astro + SolidJS sandbox
+      # Astro + SolidJS playground
 
       Happily running on Vite.
 
