--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,11 @@ import { Test } from '../components/Test.tsx'
   <head>
     <meta charset="UTF-8" />
     <title>Hello Astro!</title>
+    <style>
+body {
+  padding: 1rem;
+}
+    </style>
   </head>
   <body>
     <Markdown>
